--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,7 @@ description = "Hydra image converter"
 authors = ["Trofimov Max <trofimovmax@mail.ru>"]
 license = "MIT"
 readme = "README.md"
-package-mode = false
-
+packages = [{include = "hydra_image_loader"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11.0"
@@ -17,8 +16,7 @@ psutil = "^7.0.0"
 [tool.poetry.group.dev.dependencies]
 
 
-
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0", "cmake", "pybind11"]
 build-backend = "poetry.core.masonry.api"
 
